# gsffile

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  development-notes.md  development.md  noxfile.py  pyproject.toml  scripts
.github/: dependabot.yaml
.github/workflows/: build.yaml  ci.yaml  test.yaml
scripts/: Bootstrap.ps1  Build-Package.ps1  Install-PreCommitHooks.ps1  New-PythonVenv.ps1  Release-Package.ps1  Release-Project.ps1  Set-VenvOutsideProject.ps1  Update-PreCommitHooks.ps1  Utils.psm1
scripts/utils/: Install-PreCommit.ps1  New-PythonVenv.ps1
src/gsf_file/: __init__.py  format.py  gsf_read.py  gsf_write.py  read.py  write.py
src/gsffile/: __init__.py  format.py  read.py  write.py
tests/: __init__.py  test_read_gsf.py  test_roundtrip.py  test_write_gsf.py
