[project]
name = "gsffile"
description = "Read and write Gwyddion Simple Field files"
authors = [{ name = "Carlo Dri" }, { name = "Angelo Peronio" }]
keywords = ["Gwyddion", "Gwyddion Simple Field", "gsf"]
dynamic = ["version"]
readme = "README.md"
# Test will run against the Python versions listed in the Trove classifiers.
# Support the next pre-release Python version only after NumPy has published
# binary wheels for it, otherwise the CI would take too long.
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]
# Status of Python versions
# <https://devguide.python.org/versions/>
# Scientific Python recommendation on Python and NumPy versions to support.
# <https://scientific-python.org/specs/spec-0000/>
requires-python = ">= 3.10"
# Keep in sync with numpy_python_versions in noxfile.py.
dependencies = ["numpy >= 1.24"]
optional-dependencies.dev = [
    "build",
    "mypy",
    "pre-commit",
    "ruff",
    "twine",
    "gsffile[test]",
]
optional-dependencies.test = ["pytest", "pytest-cov"]

[project.urls]
Repository = "https://github.com/angelo-peronio/gsffile"
Issues = "https://github.com/angelo-peronio/gsffile/issues"
"GSF format" = "http://gwyddion.net/documentation/user-guide-en/gsf.html"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
build.targets.sdist.only-packages = true
version.source = "vcs"

[tool.hatch.version.raw-options]
# Version tag pattern: v[major].[minor].[patch]
# https://setuptools-scm.readthedocs.io/en/latest/config/#setuptools_scm._config.DEFAULT_TAG_REGEX
# Single quote --> literal string, https://toml.io/en/v1.0.0#string
tag_regex = '^(?P<version>v?\d+\.\d+\.\d+)$'
# To be able to publish dev versions to TestPyPI.
# https://github.com/ofek/hatch-vcs/discussions/12
local_scheme = "no-local-version"

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--import-mode=importlib",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]
log_cli_level = "DEBUG"
minversion = "7"
xfail_strict = true
testpaths = ["tests"]

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "COM812", # Trailing comma missing
]
extend-per-file-ignores."tests/*.py" = [
    "S101", # Assert used
]
pydocstyle.convention = "numpy"

[tool.mypy]
files = ["src"]
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[tool.uv]
# uv should not cache gsffile.
reinstall-package = ["gsffile"]
