[project]
name = "gsffile"
description = "Read and write Gwyddion Simple Field files"
authors = [{ name = "Carlo Dri" }, { name = "Angelo Peronio" }]
license = "MIT"
keywords = ["Gwyddion", "Gwyddion Simple Field", "gsf"]
dynamic = ["version"]
readme = "README.md"
# Test will run against the Python versions listed in the Trove classifiers.
# Support the next release-candidate Python version only after NumPy has published
# binary wheels for it, otherwise the CI would take too long.
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]
# Status of Python versions
# <https://devguide.python.org/versions/>
# Scientific Python recommendation on Python and NumPy versions to support.
# <https://scientific-python.org/specs/spec-0000/>
requires-python = ">= 3.10"
# Before attempting stunts here, consider the fragile logic
# for oldest_deps in noxfile.py.
dependencies = ["numpy >= 1.24"]

[dependency-groups]
dev = [
    "bump-my-version",
    "cffconvert",
    "mypy",
    "pre-commit",
    "pre-commit-uv",
    "nox",
    "ruff",
    { include-group = "test" },
]
test = ["pytest", "pytest-cov"]

[project.urls]
Repository = "https://github.com/angelo-peronio/gsffile"
Issues = "https://github.com/angelo-peronio/gsffile/issues"
"GSF format" = "http://gwyddion.net/documentation/user-guide-en/gsf.html"

[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
build.targets.sdist.exclude = ["/.**", "/scripts", "development.md"]
version.source = "vcs"

[tool.hatch.version.raw-options]
# Version tag pattern: v[major].[minor].[patch]
# https://setuptools-scm.readthedocs.io/en/latest/config/#setuptools_scm._config.DEFAULT_TAG_REGEX
# Single quote --> literal string, https://toml.io/en/v1.0.0#string
tag_regex = '^(?P<version>v?\d+\.\d+\.\d+)$'
# To be able to publish dev versions to TestPyPI.
# https://github.com/ofek/hatch-vcs/discussions/12
local_scheme = "no-local-version"

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--doctest-glob=README.md",
    "--import-mode=importlib",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]
log_cli_level = "DEBUG"
minversion = "7"
testpaths = ["README.md", "tests"]
xfail_strict = true

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "COM812", # Trailing comma missing
]
extend-per-file-ignores."tests/*.py" = [
    "S101", # Assert used
]
pydocstyle.convention = "numpy"

[tool.mypy]
files = ["src", "tests", "noxfile.py"]
strict = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[tool.bumpversion]
tag = true
tag_name = "v{new_version}"
tag_message = "Version v{new_version}"
commit = true

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = 'version: {current_version}'
replace = 'version: {new_version}'

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = 'date-released: "\d{{4}}-\d{{2}}-\d{{2}}"'
replace = 'date-released: "{utcnow:%Y-%m-%d}"'
regex = true

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = '## [Unreleased]'
replace = '''
## [Unreleased]

## [{new_version}] - {utcnow:%Y-%m-%d}

[PyPI](https://pypi.org/project/gsffile/{new_version}/)
 · [conda-forge](https://anaconda.org/conda-forge/gsffile)
 · [GitHub release](https://github.com/angelo-peronio/gsffile/releases/tag/v{new_version})
 · [source](https://github.com/angelo-peronio/gsffile/tree/v{new_version})
'''
